Bug 487850 - System Monitor crashes when selecting application in customized Applications page
Summary: System Monitor crashes when selecting application in customized Applications ...
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.5
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 489148 489252 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-31 20:30 UTC by Oleksii Zolotarevskyi
Modified: 2024-06-28 15:25 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB backtrace (66.43 KB, text/plain)
2024-05-31 20:30 UTC, Oleksii Zolotarevskyi
Details
Configuration of the Applications page that causes a crash (1.03 KB, text/plain)
2024-05-31 20:32 UTC, Oleksii Zolotarevskyi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleksii Zolotarevskyi 2024-05-31 20:30:22 UTC
Created attachment 170023 [details]
GDB backtrace

SUMMARY
System Monitor crashes when trying to select any application in the Applications page.
This only happens with the attached file "applications.page" placed in ~/.local/share/plasma-systemmonitor/

STEPS TO REPRODUCE
1. Place the attached "applications.page" in ~/.local/share/plasma-systemmonitor/
2. Run System Monitor (plasma-systemmonitor)
3. Navigate to Appliations page
4. Select any application

OBSERVED RESULT
System Monitor crashes (backtrace attached).

EXPECTED RESULT
System Monitor doesn't crash.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Stable
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Comment 1 Oleksii Zolotarevskyi 2024-05-31 20:32:10 UTC
Created attachment 170024 [details]
Configuration of the Applications page that causes a crash
Comment 2 TraceyC 2024-06-06 21:46:35 UTC
I was able to reproduce the bug.

Reproduction steps:
Ran System Monitor as previously configured, no application page settings file.
Clicked on the Applications tab, verified there is no crash with default settings.

Closed System Monitor.
Copied the provided settings file to ~/.local/share/plasma-systemmonitor/ and re-opened it.
Clicked on Applications. As soon as I clicked on anything listed, the application froze.

Operating System: Solus 4.5
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Comment 3 Oleksii Zolotarevskyi 2024-06-07 08:33:34 UTC
(In reply to TraceyC from comment #2)
> I was able to reproduce the bug.
Thanks for looking into it!
The applications.page that causes crash was on my system before Plasma 6 update, before the update I had no issues.
Comment 4 Bug Janitor Service 2024-06-13 12:44:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/418
Comment 5 Arjen Hiemstra 2024-06-18 18:12:33 UTC
Git commit 129f767e3985c572bc40aebb9284b028aa2c9256 by Arjen Hiemstra.
Committed on 18/06/2024 at 18:09.
Pushed by ahiemstra into branch 'master'.

itemindicators: Don't access thread-unsafe data from the render thread

There is no guarantee the model indexes we store are safe to use after
storing them, or that the model doesn't change while we're using it from
a different (render) thread. So rather than storing the model indices,
just store the data we need from them when updating.

M  +15   -7    plugin/itembranchindicators.cpp
M  +7    -1    plugin/itembranchindicators.h

https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/129f767e3985c572bc40aebb9284b028aa2c9256
Comment 6 Arjen Hiemstra 2024-06-25 10:26:34 UTC
*** Bug 489148 has been marked as a duplicate of this bug. ***
Comment 7 Arjen Hiemstra 2024-06-27 08:05:10 UTC
*** Bug 489252 has been marked as a duplicate of this bug. ***