itemindicators: Don't access thread-unsafe data from the render thread

There is no guarantee the model indexes we store are safe to use after
storing them, or that the model doesn't change while we're using it from
a different (render) thread. So rather than storing the model indices,
just store the data we need from them when updating.

BUG: 487850